--- a/proposal_latex/proposal.bib
+++ b/proposal_latex/proposal.bib
@@ -217,3 +217,17 @@ year={2016}
   publisher={IEEE}
 }
 
+@article{grover,
+  title = {Quantum Mechanics Helps in Searching for a Needle in a Haystack},
+  author = {Grover, Lov K.},
+  journal = {Phys. Rev. Lett.},
+  volume = {79},
+  issue = {2},
+  pages = {325--328},
+  numpages = {0},
+  year = {1997},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.79.325},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.79.325}
+}
