--- a/proposal_latex/proposal.bib
+++ b/proposal_latex/proposal.bib
@@ -231,3 +231,13 @@ year={2016}
   doi = {10.1103/PhysRevLett.79.325},
   url = {http://link.aps.org/doi/10.1103/PhysRevLett.79.325}
 }
+
+@incollection{pazzani2007content,
+  title={Content-based recommendation systems},
+  author={Pazzani, Michael J and Billsus, Daniel},
+  booktitle={The adaptive web},
+  pages={325--341},
+  year={2007},
+  publisher={Springer}
+}
+
