--- a/proposal_latex/proposal.tex
+++ b/proposal_latex/proposal.tex
@@ -93,13 +93,13 @@ Quantum machine learning, the intersection of quantum computation and classical 
 
 The ability to understand spoken language, to recognize faces and to distinguish different types of fruit comes naturally to humans, even though these processes of pattern recognition and classification are inherently complex. Machine learning (ML), a subtopic of artificial intelligence, is concerned with the development of algorithms that mimic these mechanisms, thereby enabling computers to find and recognise patterns in data and classify unknown inputs based on previous training with labelled inputs. Such algorithms paved the way for e.g. human speech recognition, recommendation engines as used by Amazon and algorithms that can predict heart disease from real-time electrocardiograms \citep{acharya2015integrated, pazzani2007content}.
 
-According to \cite*{bigdata}, every day approximately 2.5 quintillion (${10}^{18}$) bytes of digital data are created. This growing number implies that every area dealing with data will eventually require advanced algorithms that can make sense of data content, retrieve patterns and reveal correlations. However, most ML algorithms involve the execution of computationally expensive operations and doing so on large data sets inevitably takes a lot of time \citep{bekkerman2011scaling}. Hence, it becomes increasingly important to find efficient ways of dealing with big data and/or reduce the computational complexity of the algorithms.
+According to \cite*{bigdata}, approximately 2.5 quintillion (${10}^{18}$) bytes of digital data are created every day. This growing number implies that every area dealing with data will eventually require advanced algorithms that can make sense of data content, retrieve patterns and reveal correlations. However, most ML algorithms involve the execution of computationally expensive operations and doing so on large data sets inevitably takes a lot of time \citep{bekkerman2011scaling}. Hence, it becomes increasingly important to find efficient ways of dealing with big data and/or reduce the computational complexity of the algorithms.
 
-A promising solution is the use of quantum computation which has been researched intensively in the last decades. Quantum computers (QCs) use quantum mechanical systems and their special properties to manipulate and process information in ways that are impossible to implement on classical computers. The quantum equivalent to a classical bit is called a quantum bit (or qubit) and additionally to being in either state (\0 or \1) they can be in a linear superposition of \0 and \1. This peculiar property gives rise to so called quantum parallelism, which enables the execution of certain operations on many quantum states at the same time. However, despite this obvious advantage the real difficulty in quantum computation lies in the retrieval of the computed solution since a measurement of a qubit collapses it into a single classical bit and thereby destroys information about its previous superposition. Several quantum algorithms have been proposed that provide exponential speed-ups when compared to their classical counterparts with Shor's prime factorization algorithm being the most famous \citep{shor1994}. As another example, Grover's quantum database search algorithm enables finding a single element in a list of $N$ elements within roughly $\sqrt{N}$ steps instead of a classical minimum of $\frac{N}{2}$ steps \citep{grover}. Hence, quantum computation bears the potential to vastly improve computational power, speed up the processing of big data and solve certain problems that are practically unsolvable on classical computers. 
+A promising solution is the use of quantum computation which has been researched intensively in the last few decades. Quantum computers (QCs) use quantum mechanical systems and their special properties to manipulate and process information in ways that are impossible to implement on classical computers. The quantum equivalent to a classical bit is called a quantum bit (or qubit) and additionally to being in either state (\0 or \1) they can be in a linear superposition of \0 and \1. This peculiar property gives rise to so called quantum parallelism, which enables the execution of certain operations on many quantum states at the same time. However, despite this obvious advantage the real difficulty in quantum computation lies in the retrieval of the computed solution since a measurement of a qubit collapses it into a single classical bit and thereby destroys information about its previous superposition. Several quantum algorithms have been proposed that provide exponential speed-ups when compared to their classical counterparts with Shor's prime factorization algorithm being the most famous \citep{shor1994}. As another example, Grover's quantum database search algorithm enables finding a single element in a list of $N$ elements within roughly $\sqrt{N}$ steps instead of a classical minimum of $\frac{N}{2}$ steps \citep{grover}. Hence, quantum computation bears the potential to vastly improve computational power, speed up the processing of big data and solve certain problems that are practically unsolvable on classical computers. 
 
 %for the QML toolbox to be complete a quantum algorithm to solve systems of linear equations is needed since most ML algorithms rely on solving those.
 
-Considering these advantages, the combination of quantum computation and classical ML into the new field of quantum machine learning (QML) seems almost natural. However, since most ML algorithms rely on solving some system of linear equations, a corresponding quantum algorithm is required for QML to become achievable. \cite{HHL2009} were first to describe such an algorithm which since has become a subroutine in many QML algorithms. There are currently two main ideas on how to merge quantum computation with ML, namely a) running the classical algorithm on a classical computer and 'outsourcing' only the computationally intensive task to a QC or b) executing the quantum version of the entire algorithm on a QC. Current QML research mostly focusses on the latter by developing quantum algorithms that tab into the full potential of quantum parallelism.
+Considering these advantages, the combination of quantum computation and classical ML into the new field of quantum machine learning (QML) seems almost natural. However, since most ML algorithms rely on solving some system of linear equations, a corresponding quantum algorithm is required for QML to become achievable. \cite{HHL2009} were first to describe such an algorithm which since has become a subroutine in many QML algorithms. There are currently two main ideas on how to merge quantum computation with ML, namely a) running the classical algorithm on a classical computer and outsourcing only the computationally intensive task to a QC or b) executing the quantum version of the entire algorithm on a QC. Current QML research mostly focusses on the latter by developing quantum algorithms that tab into the full potential of quantum parallelism.
 
 %QML
 %- the unification or symbiosis of ML and QC comes naturally when considering the vast speed-ups that could be gained through implementing ML on QCs
@@ -163,7 +163,7 @@ The following sections will outline the steps required and the tools used in ord
 \subsection{Research Objectives}
 \label{subsec:researchobjectives}
 
-The main objective of this research is to demonstrate that QML algorithms can already be used for solving small problems on currently available quantum technology. Even though this might seem trivial at first, there are many problems that are often not addressed in the proposals of QML algorithms such as the encoding of data, the influence of quantum noise and the restrictions on the data type (e.g. uniformly distributed or low-rank data sets only). All theses issues have to be addressed when implementing QML algorithms experimentally and thus constitute the major research objectives during this study. 
+The main objective of this research is to demonstrate that QML algorithms can already be used for solving small problems on currently available quantum technology. Although this seems trivial at first, there are many problems that are often not addressed in the proposals of QML algorithms such as the encoding of data, the influence of quantum noise and the restrictions on the data type (e.g. uniformly distributed or low-rank data sets only). All theses issues have to be addressed when implementing QML algorithms experimentally and thus constitute the major research objectives during this study. 
 %not sure about the usefulness of the last sentence
 
 %Proof-of-principle
@@ -207,9 +207,9 @@ Next, \cite{Schuld2016} details a quantum algorithm based on linear least-square
 The first step towards implementation of the outlined algorithms will be the identification of one or several small ML problems that can be executed on maximally nine qubits. For example, this might include the characterization of colours or differentiation of digits or letters. It thereby plays an important role if the respective ML problem can be approached using a very small dataset such as the average pixel brightness or the ratio of pixels above and below the image bisector. Ideally, the data should be representable as a 2-D vector such that it requires only a few qubits to encode the information quantum mechanically.
 \newpage
 %%THE TOOLS
-There are two types of tools available for the implementation of the QML algorithms. Firstly, since current state-of-the-art quantum technology uses maximally nine qubits, a classical computer can still be used to simulate the behaviour of the QC. For example, such a software architecture is provided by Microsoft Research which has released the quantum simulation toolsuite Liqui$\ket{}$ based on the programming language F\#. There are many more QC simulators available and the decision which one to use depends on the selected QML problem and corresponding dataset \citep{quantiki}.
+There are two types of tools available for the implementation of the QML algorithms. Firstly, since current state-of-the-art quantum technology uses maximally nine qubits, a classical computer can still be used to simulate the behaviour of the QC. For example, such a software architecture is provided by Microsoft Research which has released the quantum simulation toolsuite Liqui$\ket{}$ based on the programming language F\#. There are many more QC simulators available and the selection depends on the chosen QML problem and corresponding dataset \citep{quantiki}.
 
-Secondly, earlier this year technology company IBM has enabled public access to their experimental quantum processor containing five non error-corrected superconducting qubits. Instead of only simulating on classical hardware, this opens up the possibility of executing the QML algorithm on actual quantum hardware. If it is possible to make use of IBM's QC, is highly dependent on the dataset chosen. Furthermore, until this point it remains unclear if the algorithm in \cite{Schuld2016} can be executed using five qubits only.
+Secondly, earlier this year technology company IBM has enabled public access to their experimental quantum processor containing five non error-corrected superconducting qubits. Instead of only simulating on classical hardware, this opens up the possibility of executing the QML algorithm on actual quantum hardware. Whether it is possible to make use of IBM's QC is highly dependent on the data set chosen. Furthermore, it still remains unclear if the algorithm in \cite{Schuld2016} can be executed using five qubits only.
 
 For the subsequent discussion of quantum data encoding it is important to mathematically express the superposition of a qubit $\ket{q}$ as a linear combination of the qubit states \0 and \1 as follows:
 \begin{equation}
@@ -266,7 +266,7 @@ The proposed research is part of the recent effort to move QML from theory to pr
 
 \section{Conclusion}
 \label{sec:conclusion}
-Recently, many inventive and powerful improvements to classical ML algorithms were published in the field of QML. Such algorithms are required in order to cope with and make sense of the enormous amounts of data generated in nowadays society. However, the required computational resources are not available yet and proof-of-concept studies are needed to further stress the value of theoretical developments in QML. The proposed research will identify small ML problems and suitable datasets that can already be solved using QML algorithms on state-of-the-art quantum computing technology. Investigated will be two algorithms given in \cite{Schuld2014, Schuld2016} which focus on supervised pattern classification based on linear regression and kNN. The key steps will be encoding the classical data into quantum states and designing quantum circuits representing the algorithms. Possible tools for the research include IBM's five-qubit quantum processor or QC simulator toolsuites that are executed on a classical computer.
+Recently, many inventive and powerful improvements to classical ML algorithms were published in the field of QML. Such algorithms are required in order to cope with and make sense of the enormous amounts of data generated in contemporary society. However, the required computational resources are not available yet and proof-of-concept studies are needed to further stress the value of theoretical developments in QML. The proposed research will identify small ML problems and suitable datasets that can already be solved using QML algorithms on state-of-the-art quantum computing technology. Investigated will be two algorithms given in \cite{Schuld2014, Schuld2016} which focus on supervised pattern classification based on linear regression and kNN. The key steps will be encoding the classical data into quantum states and designing quantum circuits representing the algorithms. Possible tools for the research include IBM's five-qubit quantum processor or QC simulator toolsuites that are executed on a classical computer.
 
 \section{References}
 \begingroup
